graphic issues on iphone

--- a/webpack/css/components/forms/forms.css
+++ b/webpack/css/components/forms/forms.css
@@ -22,6 +22,7 @@ select:focus {
 }
 
 input[type=submit] {
+    color: black;
     background: var(--main-bg-color);
     border: 2px solid rgba(0, 0, 0, .075);
     font-weight: 600;
