--- a/webpack/css/pages/home.css
+++ b/webpack/css/pages/home.css
@@ -145,6 +145,7 @@ footer button,
     margin-top: 20px;
     font-size: 18px;
     font-weight: 600;
+    color: black;
     background: white;
     border-radius: 25px;
     border: 0;
